# django_forum

./: .gitignore  MANIFEST.in  README.md  pip_requirements.txt  pytest.ini  setup.cfg  setup.py
django_forum/: Dockerfile  admin.py  apps.py  context_processors.py  django_forum  documents.py  forms.py  forms_custom_registration.py  models.py  pytest.ini  tasks.py  urls.py  views.py  views_forum_post.py
django_forum.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
django_forum/migrations/: 0001_initial.py  0002_alter_comment_author.py  0002_alter_comment_author_alter_post_author.py  0003_alter_forumprofile_postcode.py  0003_alter_post_author.py
django_forum/testapp/: README.md  ansible_setup_test.yml  ansible_teardown_test.yml  ansible_test_runserver.yml  requirements.text  runserver.sh  settings.py  setup.sh  tests.sh
django_forum_root/: pytest.ini
django_forum_root/django_forum/: admin.py  forms.py  models.py  tasks.py  views.py  views_forum_post.py
django_forum_root/django_forum_project/: apps.py  pytest.ini  settings.py  urls.py
django_forum_root/tests/: conftest.py
latest_logs/django_forum.tests.functional_tests.features.comments.create_comment.steps.test_create_comment.test_user_creates_a_comment/: basic_test_info.txt  page_source.html
latest_logs/django_forum.tests.functional_tests.features.comments.detail_comment.steps.test_detail_comment.test_user_views_a_comment/: basic_test_info.txt  page_source.html
latest_logs/django_forum.tests.functional_tests.features.posts.create_post.steps.test_create_post.test_user_creates_a_post/: basic_test_info.txt  page_source.html
latest_logs/django_forum.tests.functional_tests.features.posts.delete_post.steps.test_delete_post.test_user_deletes_a_post/: basic_test_info.txt  page_source.html
testapp/: management.sh  runserver.sh  setup.sh  tests.sh
testapp/dockerfile_python/: docker_entrypoint_init.sh
testapp/provisioning/: ansible_setup_test.yml  (+4 more)
(+118 files in other folders)
